build_b_test6.log
Processing default (platform: espressif32 @ 6.12.0; board: esp32-c3-devkitm-1; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
Generated: src\network\html\FilesPageHtml.generated.h
Generated: src\network\html\HomePageHtml.generated.h
Generated: src\network\html\SettingsPageHtml.generated.h
Generated: src\network\html\TextInputPageHtml.generated.h
i18n generation script (no-op)
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32-c3-devkitm-1.html
PLATFORM: Espressif 32 (6.12.0) > Espressif ESP32-C3-DevKitM-1
HARDWARE: ESP32C3 160MHz, 320KB RAM, 16MB Flash
DEBUG: Current (cmsis-dap) External (cmsis-dap, esp-bridge, esp-builtin, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - framework-arduinoespressif32 @ 3.20017.241212+sha.dcc1105b 
 - tool-esptoolpy @ 2.40900.250804 (4.9.0) 
 - toolchain-riscv32-esp @ 8.4.0+2021r2-patch5
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 60 compatible libraries
Scanning dependencies...
Dependency Graph
|-- BatteryMonitor @ 1.0.0
|-- InputManager @ 1.1.0
|-- EInkDisplay @ 1.0.0
|-- SDCardManager @ 2.0.0
|-- ArduinoJson @ 7.4.2
|-- QRCode @ 0.0.1
|-- PNGdec @ 1.1.6
|-- WebSockets @ 2.7.3
|-- NimBLE-Arduino @ 2.3.6
|-- EpdFontLoader
|-- Serialization
|-- Epub
|-- Xtc
|-- GfxRenderer
|-- Txt
|-- HTTPClient @ 2.0.0
|-- WiFi @ 2.0.0
|-- OpdsParser
|-- EpdFont
|-- Utf8
|-- ESPmDNS @ 2.0.0
|-- DNSServer @ 2.0.0
|-- hal
|-- KOReaderSync
|-- FsHelpers
|-- SPI @ 2.0.0
|-- WiFiClientSecure @ 2.0.0
|-- JpegToBmpConverter
|-- WebServer @ 2.0.0
Building in release mode
Compiling .pio\build\default\src\components\themes\lyra\LyraFlowTheme.cpp.o
Compiling .pio\build\default\src\network\HttpDownloader.cpp.o
Compiling .pio\build\default\src\network\KeyboardWebinputServer.cpp.o
Compiling .pio\build\default\src\network\OtaUpdater.cpp.o
Compiling .pio\build\default\src\util\ButtonNavigator.cpp.o
Compiling .pio\build\default\src\util\StringUtils.cpp.o
Compiling .pio\build\default\src\util\UrlUtils.cpp.o
Building .pio\build\default\bootloader.bin
Generating partitions .pio\build\default\partitions.bin
esptool.py v4.9.0
Creating esp32c3 image...
Merged 1 ELF section
Successfully created esp32c3 image.
Compiling .pio\build\default\libe9e\BatteryMonitor\BatteryMonitor.cpp.o
Compiling .pio\build\default\libf36\InputManager\InputManager.cpp.o
Compiling .pio\build\default\libd1b\SPI\SPI.cpp.o
pio.exe : src/components/themes/lyra/LyraFlowTheme.cpp: In member function 'virtual void LyraFlowTheme::drawRecentBookC
over(GfxRenderer&, Rect, const std::vector<RecentBook>&, int, bool&, bool&, bool&, std::function<bool()>, const BookRea
dingStats*, float) const':
At line:1 char:166
+ ... : $(Get-Date -Format 'HH:mm:ss')"; & $pio run -e default 2>&1 | Out-F ...
+                                        ~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (src/components/... float) const'::String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
src/components/themes/lyra/LyraFlowTheme.cpp:92:5: error: 'drawEmptyRecents' was not declared in this scope
     drawEmptyRecents(renderer, rect);
     ^~~~~~~~~~~~~~~~
src/components/themes/lyra/LyraFlowTheme.cpp:92:5: note: suggested alternative: 'drawButtonHints'
     drawEmptyRecents(renderer, rect);
     ^~~~~~~~~~~~~~~~
     drawButtonHints
src/components/themes/lyra/LyraFlowTheme.cpp: In lambda function:
src/components/themes/lyra/LyraFlowTheme.cpp:139:11: error: 'Storage' was not declared in this scope
       if (Storage.openFileForRead("HOME", coverPath, file)) {
           ^~~~~~~
src/components/themes/lyra/LyraFlowTheme.cpp: In member function 'virtual void LyraFlowTheme::drawRecentBookCover(GfxRe
nderer&, Rect, const std::vector<RecentBook>&, int, bool&, bool&, bool&, std::function<bool()>, const BookReadingStats*
, float) const':
src/components/themes/lyra/LyraFlowTheme.cpp:200:44: error: 'Storage' was not declared in this scope
   const bool centerOpened = !cp.empty() && Storage.openFileForRead("HOME", cp, cf);
                                            ^~~~~~~
Compiling .pio\build\default\lib525\EInkDisplay\EInkDisplay.cpp.o
Archiving .pio\build\default\libe9e\libBatteryMonitor.a
Compiling .pio\build\default\liba13\SdFat\ExFatLib\ExFatDbg.cpp.o
*** [.pio\build\default\src\components\themes\lyra\LyraFlowTheme.cpp.o] Error 1
========================= [FAILED] Took 10.61 seconds =========================

Environment    Status    Duration
-------------  --------  ------------
default        FAILED    00:00:10.607
==================== 1 failed, 0 succeeded in 00:00:10.607 ====================
